--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="fab_description">Adiconar Tarefa</string>
     <string name="task_done">Tarefa concluída</string>
     <string name="task_updated">Tarefa atualizada</string>
+    <string name="delete_task">Concluir Tafera</string>
 </resources>
